--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^9.14.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.0"
   },
   "devDependencies": {
     "@tsconfig/next-strictest": "^1.0.0",
