--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
+    "prettier": "2.7.1",
     "typescript": "^4.8.4"
   }
 }
