--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -26,7 +27,9 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
+    "postcss": "^8.4.19",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4"
   }
 }
