--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "firebase": "^9.14.0",
-    "next": "13.0.0",
+    "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.0"
+    "react-hook-form": "^7.39.5",
+    "axios": "^1.1.3",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "@tsconfig/next-strictest": "^1.0.0",
-    "@types/node": "18.11.7",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
@@ -32,6 +33,6 @@
     "postcss": "^8.4.19",
     "prettier": "2.7.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.8.4"
+    "typescript": "4.9.3"
   }
 }
