--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "next": "13.0.4",
+    "node-fetch": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.5",
-    "axios": "^1.1.3",
-    "node-fetch": "^3.3.0"
+    "react-hook-form": "^7.39.5"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
