--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@nextui-org/react": "^1.0.0-beta.10",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
-    "next": "13.0.4",
+    "next": "^13.0.5",
     "node-fetch": "^3.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.0.5",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
