--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ next-env.d.ts
 src/components/logo
 src/components/images
 src/components/distortions
+src/components/diaries/EmotionIcons.tsx
 src/pages/template.tsx
