--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.5"
+    "react-hook-form": "^7.39.5",
+    "react-markdown": "^8.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
