--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^8.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
