--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@nextui-org/react": "^1.0.0-beta.10",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
