--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.13",
     "@nextui-org/react": "^1.0.0-beta.11",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "next": "^13.0.5",
     "node-fetch": "^3.3.0",
