--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.4.1",
     "next": "^13.0.5",
     "node-fetch": "^3.3.0",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
