--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@vercel/analytics": "^0.1.7",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
